--- a/MODAMSWeb/Areas/Users/Views/Home/Index.cshtml
+++ b/MODAMSWeb/Areas/Users/Views/Home/Index.cshtml
@@ -2,7 +2,6 @@
 <link href="~/assets/plugins/c3-0.7.20/c3.min.css" rel="stylesheet" />
 <style>
     body {
-        overflow: hidden;
         margin: 0;
         padding: 0;
     }
@@ -97,7 +96,24 @@
             @{
                 foreach (var newsfeed in Model.NewsFeed)
                 {
-                    <a asp-area="@newsfeed.Area" asp-controller="@newsfeed.Controller" asp-action="@newsfeed.Action" asp-route-id="@newsfeed.SourceRecordId">
+                    <span class="news-item text-muted p-2 text-info">
+                        <svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 384 512">
+                            <style>
+                                svg {
+                                    fill: lightblue
+                                }
+                            </style>
+                            <path d="M0 256L28.5 28c2-16 15.6-28 31.8-28H228.9c15 0 27.1 12.1 27.1 27.1c0 3.2-.6 6.5-1.7 9.5L208 160H347.3c20.2 0 36.7 16.4 36.7 36.7c0 7.4-2.2 14.6-6.4 20.7l-192.2 281c-5.9 8.6-15.6 13.7-25.9 13.7h-2.9c-15.7 0-28.5-12.8-28.5-28.5c0-2.3 .3-4.6 .9-6.9L176 288H32c-17.7 0-32-14.3-32-32z" />
+                        </svg>
+                        @newsfeed.Description
+                    </span>
+                    
+                    @Html.Raw("&nbsp; &nbsp; &nbsp;")
+                    ;
+                }
+                @if (Model.NewsFeed.Count > 0)
+                {
+                    <a asp-area="Users" asp-controller="Home" asp-action="Newsfeed">
                         <span class="news-item text-muted p-2">
                             <svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 384 512">
                                 <style>
@@ -107,10 +123,11 @@
                                 </style>
                                 <path d="M0 256L28.5 28c2-16 15.6-28 31.8-28H228.9c15 0 27.1 12.1 27.1 27.1c0 3.2-.6 6.5-1.7 9.5L208 160H347.3c20.2 0 36.7 16.4 36.7 36.7c0 7.4-2.2 14.6-6.4 20.7l-192.2 281c-5.9 8.6-15.6 13.7-25.9 13.7h-2.9c-15.7 0-28.5-12.8-28.5-28.5c0-2.3 .3-4.6 .9-6.9L176 288H32c-17.7 0-32-14.3-32-32z" />
                             </svg>
-                            @newsfeed.Description
-                        </span>&nbsp;&nbsp;&nbsp;&nbsp;
+                            more...
+                        </span>
                     </a>
                 }
+
             }
         </div>
     </div>
