--- a/MODAMSWeb/Areas/Users/Views/Home/Index.cshtml
+++ b/MODAMSWeb/Areas/Users/Views/Home/Index.cshtml
@@ -16,7 +16,7 @@
     .marquee {
         white-space: nowrap;
         position: absolute;
-        animation: marquee 30s linear infinite; /* Adjust the duration as needed */
+        animation: marquee 20s linear infinite;
     }
 
     @@keyframes marquee {
@@ -109,7 +109,6 @@
                     </span>
                     
                     @Html.Raw("&nbsp; &nbsp; &nbsp;")
-                    ;
                 }
                 @if (Model.NewsFeed.Count > 0)
                 {
