--- a/MODAMSWeb/Areas/Admin/Views/Departments/EditDepartment.cshtml
+++ b/MODAMSWeb/Areas/Admin/Views/Departments/EditDepartment.cshtml
@@ -49,6 +49,15 @@
                                         </div>
                                     </div>
                                 </div>
+                                <div class="row">
+                                    <div class="col-sm-6">
+                                        <div class="mb-3 form-group">
+                                            <label asp-for="DepartmentOwner"></label>
+                                            <input asp-for="DepartmentOwner" class="form-control" aria-required="true" readonly placeholder="Department Owner" />
+                                            <span asp-validation-for="DepartmentOwner" class="text-danger"></span>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                         </form>
                     </div>
